--- a/base.css
+++ b/base.css
@@ -24,7 +24,7 @@ p {
     color: #D1D5DB;
     margin-bottom: 1rem;
 }
-seo-container {
+.seo-container {
     max-width: 56rem;
     margin: 0 auto;
     margin-top: 1.5rem;
