--- a/base.css
+++ b/base.css
@@ -1,3 +1,4 @@
+@layer base {
 h1 {
     font-weight: 700;
     font-size: 3rem;
@@ -92,4 +93,5 @@ table tbody tr:last-child td {
     table td {
         padding: 0.5rem;
     }
+}
 }
