--- a/base.css
+++ b/base.css
@@ -2,19 +2,21 @@
     font-weight: 700;
     font-size: 3rem;
     line-height: 1.25;
-    margin-bottom: 1rem;
 }
 .seo-container h2 {
     font-weight: 600;
     font-size: 1.5rem;
     line-height: 2rem;
-    margin-bottom: 1rem;
 }
 .seo-container h3 {
     font-weight: 600;
     font-size: 1.25rem;
     line-height: 1.75rem;
-    margin-bottom: 1rem;
+}
+.seo-container h4 {
+    font-weight: 600;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
 }
 .seo-container h1, .seo-container h2, .seo-container h3, .seo-container h4, .seo-container h5, .seo-container h6, .seo-container span, .seo-container li, .seo-container table, .seo-container pre, .seo-container i, .seo-container strong, .seo-container b {
     color: #ffffff;
