--- a/base.css
+++ b/base.css
@@ -3,10 +3,12 @@
     font-size: 3rem;
     line-height: 1.25;
 }
-.seo-container h2 {
+.seo-container h2, h2 {
     font-weight: 600;
     font-size: 1.5rem;
     line-height: 2rem;
+    color: #ffffff;
+    margin-bottom: 1rem;
 }
 .seo-container h3 {
     font-weight: 600;
