--- a/base.css
+++ b/base.css
@@ -153,11 +153,7 @@ body {
     .container,
     .header-container,
     .breadcrumb-nav {
-        max-width: 1080px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 20px;
-        padding-right: 20px;
+        max-width: 1080px !important;
     }
 }
 @media screen and (min-width: 1600px) {
